--- a/package.json
+++ b/package.json
@@ -15,27 +15,58 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@primer/octicons-react": "^17.4.1",
+    "@react-google-maps/api": "^2.12.0",
+    "@react-native-async-storage/async-storage": "^1.17.7",
+    "@react-native-firebase/app": "^15.1.1",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "^6.2.2",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
+    "expo-av": "^11.2.3",
+    "expo-camera": "^12.2.0",
     "expo-constants": "~13.1.1",
     "expo-font": "~10.1.0",
+    "expo-image-picker": "^13.1.1",
     "expo-linking": "~3.1.0",
+    "expo-location": "~14.2.2",
+    "expo-media-library": "^14.1.0",
+    "expo-permissions": "^13.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
+    "expo-video-thumbnails": "^6.3.0",
     "expo-web-browser": "~10.2.0",
+    "firebase": "^9.9.1",
+    "image-picker": "^0.3.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-native": "0.68.2",
+    "react-native-app-intro-slider": "^4.0.4",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-maps": "0.30.2",
+    "react-native-pager-view": "5.4.15",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7"
+    "react-native-svg": "12.3.0",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "rn-sliding-up-panel": "^2.4.5",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.66.13",
     "jest": "^26.6.3",
